# ad-rag-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
scripts/: build_chunks.py  build_index.py  fetch_pmc.py  test_anthropic_integration.py  test_openai_integration.py
src/ad_rag_pipeline/: chunking.py  config.py  embedding.py  indexing.py  ingestion.py
src/ad_rag_service/: config.py  generator.py  indexing.py  main.py  retrieval.py  service.py  types.py
src/ad_rag_service/llm/: anthropic_client.py  dummy_client.py  factory.py  interface.py  openai_client.py
src/ad_rag_ui/: app.py
tests/fixtures/: sample.xml
tests/integration/: test_build_chunks_dataset.py  test_ingestion_resume_tmp.py  test_service_api.py  test_service_hardening.py  test_service_orchestration.py
tests/unit/: test_anthropic_client.py  test_chunking.py  test_embedding.py  test_indexing.py  test_ingestion_fetch_single.py  test_ingestion_helpers.py  test_llm_factory.py  test_openai_client.py  test_service_config_types.py  test_service_generator.py  test_service_indexing.py  test_service_retrieval.py
